# proxmox-vm

./: .gitignore  .gitignore.new  AGENTS.md  DEVELOPMENT.md  QUICKSTART.md  README.md  create-dns.py  create-vm.py  delete-dns.py  delete-vm.py  manage-firewall.py  manage-images.py  netbox_utils.py  ping-subnet.py  proxmox.ini.example  proxmox_utils.py  pyproject.toml  requirements.txt  setip.py  start-vm.py  stop-vm.py
src/proxmox/: __init__.py  cli.py  netbox_utils.py  proxmox_utils.py  vm_create.py  vm_delete.py
src/proxmox/commands/: __init__.py  dns.py  firewall.py  images.py  tag.py  vm.py
